[package]
name = "serde-bytes-heapless-test"
version = "0.0.0-not-for-release"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

[dependencies]
cortex-m-semihosting = "0.3.5"
heapless = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.10", default-features = false }

[dependencies.serde_bytes]
git = "https://github.com/nickray/bytes"
branch = "nickray-heapless-feature"
default-features = false
features = ["heapless"]
